--- a/app/src/main/res/drawable/btn_bg.xml
+++ b/app/src/main/res/drawable/btn_bg.xml
@@ -3,14 +3,14 @@
     <item>
         <shape>
 
-            <solid android:color="#282828">
+            <solid android:color="#FB3944">
 
             </solid>
             <stroke
                 android:color="#414141"
                 android:width="1dp"
                 ></stroke>
-            <corners android:radius="6dp" />
+            <corners android:radius="90dp" />
         </shape>
     </item>
 </selector>
