--- a/app/src/main/res/drawable/et_bg.xml
+++ b/app/src/main/res/drawable/et_bg.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#f7f7f7">
+    <solid android:color="#00000000">
 
     </solid>
     <corners android:radius="50dp"/>
 
-    <stroke android:color="#e0e0e0" android:width="1dp"/>
+    <stroke android:color="#c8c8c8" android:width="1dp"/>
 
 
 
