--- a/app/src/main/res/layout/activity_video_view.xml
+++ b/app/src/main/res/layout/activity_video_view.xml
@@ -148,9 +148,8 @@
 
                     <ImageView
                         android:layout_width="32dp"
-                        app:srcCompat="@drawable/ic_baseline_filter_none_24"
+                        app:srcCompat="@drawable/ic_add_black_24dp"
                         android:tint="#FFF"
-                        android:padding="3dp"
                         android:layout_centerHorizontal="true"
                         android:id="@+id/i1"
                         android:layout_height="32dp"/>
@@ -158,8 +157,7 @@
                         android:layout_width="wrap_content"
                         android:layout_below="@+id/i1"
                         android:layout_centerHorizontal="true"
-                        android:text="Копировать"
-                        android:singleLine="true"
+                        android:text="Мой лист"
                         android:textSize="12dp"
                         android:id="@+id/likes"
                         android:textColor="#9E9E9E"
@@ -187,7 +185,7 @@
 
                     <ImageView
                         android:layout_width="24dp"
-                        app:srcCompat="@drawable/ic_baseline_cloud_download_24"
+                        app:srcCompat="@drawable/ic_share_black_24dp"
                         android:tint="#FFF"
                         android:layout_centerHorizontal="true"
                         android:id="@+id/i1"
@@ -196,7 +194,7 @@
                         android:layout_width="wrap_content"
                         android:layout_below="@+id/i1"
                         android:layout_centerHorizontal="true"
-                        android:text="Скачать"
+                        android:text="Поделиться"
                         android:textSize="12dp"
                         android:id="@+id/likes"
                         android:textColor="#9E9E9E"
