--- a/app/src/main/res/layout/fragment_frag2.xml
+++ b/app/src/main/res/layout/fragment_frag2.xml
@@ -12,13 +12,20 @@
         android:layout_height="wrap_content">
 
 
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="180dp"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/second"
+            android:id="@+id/first"
+            />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_below="@+id/first"
-            android:text="Пока что это ранняя версия"
+            android:text="Таймер в нижней части экрана"
             android:textColor="#FFF"
             android:textSize="20dp"
             android:layout_marginTop="10dp"
@@ -41,7 +48,7 @@
             android:textAlignment="center"
             android:textColor="#FFF"
             android:id="@+id/status_bar_latest_event_conten"
-            android:text="То есть, в процессе просмотра могут возникнуть какие-то неполадки!"/>
+            android:text="После клика на рекламу, появится таймер. Чтобы реклама исчезла, нужно чтобы таймер закончил свою работу"/>
 
 
 
