--- a/app/src/main/res/layout/new_control_panel_layout.xml
+++ b/app/src/main/res/layout/new_control_panel_layout.xml
@@ -185,12 +185,12 @@
 
         <ProgressBar
             android:id="@+id/loading"
-            android:layout_width="62dp"
-            android:indeterminateTint="#ffffff"
+            android:layout_width="45dp"
             android:layout_height="62dp"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:visibility="visible" />
+            android:indeterminateDrawable="@drawable/salient_video_loading"
+            android:visibility="invisible" />
 
 
 
