Добавленна вкладка "Просмотренные"
Signed-off-by: Alimuhammad <GulovAli@github.com>

--- a/app/src/main/res/layout/fragment_five.xml
+++ b/app/src/main/res/layout/fragment_five.xml
@@ -346,6 +346,15 @@
     </RelativeLayout>
 
 
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:visibility="gone"
+        android:id="@+id/progress"/>
+
+
 
 
 </RelativeLayout>
