--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -57,7 +57,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/age"
-                android:text="16+"
+                android:text=""
                 android:maxLines="2"
                 android:textColor="#FFF"
                 android:layout_alignParentEnd="true"
