--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -81,7 +81,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/timeLapse"
                 android:id="@+id/title"
-                android:text="TNT _ 505 просмотров _ Год назад"
+                android:text=""
                 android:layout_marginTop="4dp"
                 android:textColor="#A9A9A9"
                 android:textSize="12sp"
