--- a/app/src/main/res/layout/content_scrolling.xml
+++ b/app/src/main/res/layout/content_scrolling.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFF"
+    android:background="#282828"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
 
@@ -18,6 +18,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="#A9A9A9"
             android:text="Это первый релиз и большую часть функций сайта не успели добавить(((. В последующих обновлениях будут доступны все фишки, такие как: добавление видео в плейлисты, добавление видеофайлов прямо на сайт с телефона, уведомление о новых видео (например все новые видео по запросу 'камеди клаб' ) ,  и многое другое.  Владельцам айфонов не стоит огорчаться, для них приложение будет доступно уже в начале февраля. Следующее крупное обновление для Андроид будет доступно уже в конце декабря... По любым вопросам писать в инстаграмм: @lumies"/>
     </RelativeLayout>
 
